# meiliisland

./: .gitignore  README.md  config.toml.example  config_loader.py  database_sources.py  db2meili.py  pyproject.toml  requirements.txt  sync_task.py
